--- a/src/main/webapp/app/entities/product/update/product-update.component.html
+++ b/src/main/webapp/app/entities/product/update/product-update.component.html
@@ -108,17 +108,7 @@
             </div>
           </div>
 
-          <label class="col-sm-2 control-label">
-            MRP
-            <span class="required">*</span>
-          </label>
-          <div class="col-sm-4">
-            <input class="form-control number" name="mrp" type="text" value="2300" />
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label class="col-sm-2 control-label"> Minimum Retail Price </label>
+          <label class="col-sm-2 control-label"> prix de vente </label>
           <div class="col-sm-4">
             <input
               type="number"
@@ -129,13 +119,17 @@
               formControlName="minimumRetailPrice"
             />
           </div>
+        </div>
+
+        <!-- <div class="form-group">
+          
 
           <label class="col-sm-2 control-label"> Product Tax </label>
 
           <div class="col-sm-4 tooltip-button" title="" data-original-title="To enable product tax, go to the settings">
             <input type="text" disabled="" class="form-control" value="disabled" />
           </div>
-        </div>
+        </div> -->
 
         <div class="form-group">
           <label class="col-sm-2 control-label"> Unit </label>
@@ -199,10 +193,10 @@
         <div class="form-group">
           <label class="col-sm-2 control-label"> Image </label>
           <div class="col-sm-4">
-            <input name="image" type="file" />
+            <input class="form-control" name="image" type="file" />
           </div>
 
-          <div class="col-sm-3">
+          <!-- <div class="col-sm-3">
             <p>
               <a href="http://localhost/intell/public/uploads/products/ZBy1iqjmf9Lf.jpg">
                 <abbr title="Show Product Image">
@@ -210,7 +204,7 @@
                 </abbr>
               </a>
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
 
