--- a/src/main/webapp/app/entities/subcategorie/list/subcategorie.component.html
+++ b/src/main/webapp/app/entities/subcategorie/list/subcategorie.component.html
@@ -119,7 +119,13 @@
                 Edit
               </a>
               <!-- Delete modal trigger -->
-              <a type="button" class="btn btn-danger btn-alt btn-xs" data-toggle="modal" data-target="#deleteModal3">
+              <a
+                type="button"
+                class="btn btn-danger btn-alt btn-xs"
+                (click)="prepareDelete(subcategorie)"
+                data-toggle="modal"
+                data-target="#deleteModal"
+              >
                 <i class="fa fa-trash"></i>
                 Delete
               </a>
@@ -147,6 +153,46 @@
       ></ngb-pagination>
     </div>
     <!--Ends-->
+
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">
+              {{ selectedSubCategogy.name }}
+            </h4>
+          </div>
+          <div class="modal-body">
+            <h4>
+              Êtes-vous sûr de supprimer la sous catégorie <b>{{ selectedSubCategogy.name }}</b> ?
+            </h4>
+            <br />
+            <!-- @if(count($category->subcategories) == 0 )
+
+            @else -->
+            <h4 style="color: red" *ngIf="selectedSubCategogyProducts.length > 0">
+              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+              Cette sous catégorie a {{ selectedSubCategogyProducts.length }} produits, elle ne peut donc pas être supprimée !
+            </h4>
+            <!-- @endif -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+            <button
+              type="submit"
+              class="btn btn-danger"
+              data-dismiss="modal"
+              (click)="supprimer()"
+              [disabled]="selectedSubCategogyProducts.length > 0"
+            >
+              Supprimer
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Subcategory search modal -->
