--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -153,7 +153,7 @@
       </li>
 
       <li class="no-menu">
-        <a routerLink="subcategorie" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="transaction" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
           <i class="fas fa-money"></i>
           <span>{{ 'Transactions' }}</span>
         </a>
