--- a/src/main/webapp/app/entities/categorie/list/categorie.component.html
+++ b/src/main/webapp/app/entities/categorie/list/categorie.component.html
@@ -36,46 +36,18 @@
                 {{ 'edit' }}
               </a>
               <!-- Delete modal trigger -->
-              <a type="button" class="btn btn-danger btn-alt btn-xs" data-toggle="modal" data-target="#deleteModal">
+              <a
+                type="button"
+                (click)="prepareDelete(categorie)"
+                class="btn btn-danger btn-alt btn-xs"
+                data-toggle="modal"
+                data-target="#deleteModal"
+              >
                 <i class="fa fa-trash"></i>
                 {{ 'delete' }}
               </a>
             </td>
           </tr>
-
-          <!-- Modal -->
-          <!-- <div class="modal fade" id="deleteModal{{category->id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-						{!! Form::open(['route' => ['category.delete', $category], 'method' => 'delete' ]) !!}
-					  <div class="modal-dialog" role="document">
-					    <div class="modal-content">
-					      <div class="modal-header">
-					        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-					        <h4 class="modal-title" id="myModalLabel">
-					  			{{$category->category_name}}
-					        </h4>
-					      </div>
-					      <div class="modal-body">
-					        <h4>
-					        	{{trans('core.delete_alert')}} <b>{{$category->category_name}}</b> {{trans('core.category')}}?
-					        </h4>
-					        <br>
-					        @if(count($category->subcategories) == 0 )
-
-					        @else
-					        	<h4 style="color: red;">
-					        	<i class="fa fa-exclamation-triangle" aria-hidden="true"></i>This Category Has {{count($category->subcategories)}} Subcategory, so it can't be deleted!</h4>
-					        @endif
-					      </div>
-					      <div class="modal-footer">
-					        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					        <button type="submit" class="btn btn-danger">
-					        	{{trans('core.delete')}}
-					        </button>
-					      </div>
-					    </div>
-					  </div>
-					  {!! Form::close() !!}
-					</div> -->
         </tbody>
       </table>
     </div>
@@ -90,6 +62,46 @@
         [boundaryLinks]="true"
         (pageChange)="loadPage($event)"
       ></ngb-pagination>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">
+              {{ selectedCategogy.categoryName }}
+            </h4>
+          </div>
+          <div class="modal-body">
+            <h4>
+              Êtes-vous sûr de supprimer la catégorie <b>{{ selectedCategogy.categoryName }}</b> ?
+            </h4>
+            <br />
+            <!-- @if(count($category->subcategories) == 0 )
+
+            @else -->
+            <h4 style="color: red" *ngIf="(selectedCategogy.subcategories?.length ?? 0) > 0">
+              <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+              Cette catégorie a {{ selectedCategogy.subcategories?.length }} sous-catégories, elle ne peut donc pas être supprimée !
+            </h4>
+            <!-- @endif -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+            <button
+              type="submit"
+              class="btn btn-danger"
+              data-dismiss="modal"
+              (click)="supprimer()"
+              [disabled]="(selectedCategogy.subcategories?.length ?? 0) > 0"
+            >
+              Supprimer
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
